Closed
Bug 1715844
Opened 4 years ago
Closed 4 years ago
undefined reference to `uprofiler_unregister_thread()'
Categories
(Core :: Gecko Profiler, defect, P2)
Tracking
()
RESOLVED
FIXED
91 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | unaffected |
firefox91 | --- | fixed |
People
(Reporter: dan, Assigned: mozbugz)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I am getting an "undefined reference to uprofiler_unregister_thread()
" error at the final linking stage after a recent change (last day or two, my last build on Tue was OK) on Fedora/34 on ppc64le. More details will follow.
...
1:52.34 /usr/bin/ld: /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/toolkit/library/build/../../../third_party/libwebrtc/webrtc/rtc_base/rtc_base_approved_generic_gn/Unified_cpp__approved_generic_gn1.o: in function `AutoRegisterProfiler::AutoRegisterProfiler(char const*, char*)':
1:52.34 /mnt/dan/firefox.git/tools/profiler/public/MicroGeckoProfiler.h:25: undefined reference to `uprofiler_register_thread(char const*, void*)'
1:52.34 /usr/bin/ld: /mnt/dan/firefox.git/obj-powerpc64le-unknown-linux-gnu/toolkit/library/build/../../../third_party/libwebrtc/webrtc/rtc_base/rtc_base_approved_generic_gn/Unified_cpp__approved_generic_gn1.o: in function `AutoRegisterProfiler::~AutoRegisterProfiler()':
1:52.34 /mnt/dan/firefox.git/tools/profiler/public/MicroGeckoProfiler.h:27: undefined reference to `uprofiler_unregister_thread()'
1:52.34 /usr/bin/ld: /mnt/dan/firefox.git/tools/profiler/public/MicroGeckoProfiler.h:27: undefined reference to `uprofiler_unregister_thread()'
2:08.60 /usr/bin/ld: libxul.so: hidden symbol `_Z25uprofiler_register_threadPKcPv' isn't defined
2:08.60 /usr/bin/ld: final link failed: bad value
2:08.87 collect2: error: ld returned 1 exit status
Assignee | ||
Comment 1•4 years ago
|
||
Bug 1714577 introduced uprofiler_unregister_thread()
and friends. I'm guessing there may be missing #ifdef MOZ_GECKO_PROFILER
s.
It's :padenot 's night now, and I have experience (sigh) with this kind of issues, so I'll have a look.
Updated•4 years ago
|
Has Regression Range: --- → yes
Assignee | ||
Updated•4 years ago
|
Severity: -- → S2
Priority: -- → P2
Assignee | ||
Comment 2•4 years ago
|
||
Comment 3•4 years ago
|
||
Just for record. I don't see this problem on Solaris.
I confirm the proposed patch fixes my build problem on ppc64le.
Pushed by gsquelart@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab6c5301aed1
Fixed non-MOZ_GECKO_PROFILER build of MicroGeckoProfiler - r=canaltinova
Comment 6•4 years ago
|
||
Set release status flags based on info from the regressing bug 1714577
status-firefox89:
--- → unaffected
status-firefox90:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Comment 7•4 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•