Bug 1715844 - Fixed non-MOZ_GECKO_PROFILER build of MicroGeckoProfiler - r=canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D117493