tools/profiler/core/MicroGeckoProfiler.cpp
@@ -7,13 +7,20 @@
 using namespace mozilla;
 
 void uprofiler_register_thread(const char* name, void* stacktop) {
+#ifdef MOZ_GECKO_PROFILER
   profiler_register_thread(name, stacktop);
+#endif  // MOZ_GECKO_PROFILER
 }
 
-void uprofiler_unregister_thread() { profiler_unregister_thread(); }
+void uprofiler_unregister_thread() {
+#ifdef MOZ_GECKO_PROFILER
+  profiler_unregister_thread();
+#endif  // MOZ_GECKO_PROFILER
+}
 
 // The category string will be handled later in Bug 1715047
 void uprofiler_simple_event_marker(const char* name, const char*, char phase) {
+#ifdef MOZ_GECKO_PROFILER
   switch (phase) {
     case 'B':
       profiler_add_marker(ProfilerString8View::WrapNullTerminatedString(name),
@@ -36,4 +43,5 @@ void uprofiler_simple_event_marker(const char* name, const char*, char phase) {
       }
       break;
   }
+#endif  // MOZ_GECKO_PROFILER
 }
